@@ -11,15 +11,13 @@ These are new issues identified but not entered into the outstanding bug list
 Priority Issues (Fix These First)
 -------------------------------
 
-- 2> redirection
+- redirection
+  - characters before a redirection
   - when i tried git branch 2>/dev/null, standard output was redirected
   - 2> wasn't allowed after the first command in a pipeline but should be
 - pack - script is not exiting on a return, but was working before
   the recent changes for enhanced Ada checking
-- is close_on_exec useful?
-- test cases
-  can HTML be embedded as CDATA in junit xml?
-- improving test coverage
+- manual test cases -  can HTML be embedded as CDATA in junit xml?
 - improving shell features
 - incomplete casting tests
 
@@ -89,6 +87,7 @@ Priority Issues (Fix These First)
       identifiers.  See /usr/include/aspell.h for interface to spell checker.
     - a variable not declared is said to be declared but not used (this_run_on in
       ssds project) - could not duplicate in simple test
+    - is close_on_exec useful?
 
 Annoyances / Bugs with Workarounds / Updates
 --------------------------------------------
